# StackGP

./: CMakeLists.txt  README.md  StackGP.sln  StackGP.vcxproj  StackGP.vcxproj.filters  main.cpp  pycuda-stack-gp-1.ipynb  pycuda-stack-gp-2.ipynb  pycuda-stack-gp-3.ipynb  pycuda-stack-gp-4.ipynb  pycuda-stack-gp-5.ipynb  pycuda-stack-gp-6.ipynb  pycuda-stack-gp-7.ipynb  random.cpp  random.h  tit2_x_test.txt  tit2_y.txt  tit_x.txt  tit_x_test.txt  titanic_cpp_test_x_old.txt  titanic_cpp_test_y.txt  titanic_cpp_x.txt  titanic_cpp_x_old.txt
